Fixed repo name

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ version '0.1'
 //githubToken='6056f8c5481d08f8cd3a0e29c87db1235f9977f2'
 
 githubPages {
-    repoUri = 'git@github.com:MartinAhrer/fhs-MSE15.3.AKT.git'
+    repoUri = 'git@github.com:MartinAhrer/fhs-mse-akt.git'
 
     credentials {
         username = project.hasProperty('githubToken') ? project.githubToken : ''
@@ -37,16 +37,3 @@ asciidoctor {
 }
 
 publishGhPages.dependsOn asciidoctor
-
-
-//apply plugin: 'java'
-
-//sourceCompatibility = 1.5
-
-//repositories {
-//    mavenCentral()
-//}
-
-//dependencies {
-//    testCompile group: 'junit', name: 'junit', version: '4.11'
-//}
